# OpenCV-Tests

./: CMakeLists.txt  main.cpp  ocv_test  ocv_test.cpp
